--- a/cl-web-firstweb/style.css
+++ b/cl-web-firstweb/style.css
@@ -15,7 +15,7 @@
     
     --image: var(--soft);
     
-    --background: #f5f5f5;
+    --background: #ffffff;
     --text: #222222;
     
     --light: var(--background);
